--- a/simple-validation.css
+++ b/simple-validation.css
@@ -1,14 +1,87 @@
 body
 {
+	color: #333;
 	font-family: arial;
-	padding: 0 1rem;
+	margin: 0;
+	padding: 0;
+}
+
+body > header
+{
+	background-color: #333;
+	color: #fff;
+	display: block;
+	overflow: hidden;
+}
+	body > header > .wrap
+	{
+		margin: auto;
+		max-width: 50rem;
+	}
+
+body > main
+{
+	display: block;
+	overflow: hidden;
+}
+	body > main > .wrap
+	{
+		margin: auto;
+		max-width: 50rem;
+	}
+
+body > footer
+{
+	display: block;
+	overflow: hidden;
+}
+	body > footer > .wrap
+	{
+		border-top: 1px solid #333;
+		margin: auto;
+		max-width: 50rem;
+	}
+
+body .wrap
+{
+	padding: 1rem;
+}
+
+h1, h2, h3, h4, h5, h6
+{
+	font-weight: normal;
+}
+	h1 > a
+	{
+		font-size: 80%;
+		font-weight: normal;
+	}
+
+div
+{
+	overflow: hidden;
+}
+
+form
+{
+	margin: 0 0 1.5rem 0;
+	padding: 2%;
+}
+
+form legend
+{
+	font-weight: bold;
+}
+
+fieldset
+{
+	border: none;
 }
 
 input, textarea
 {
 	border: 1px solid #333;
 	box-sizing: border-box;
-	color: #333;
 	outline: none;
 	padding: 0.2rem 0.5rem;
 	width: 16rem;
@@ -23,6 +96,18 @@ input[type="submit"], button[type="submit"]
 textarea
 {
 	min-height: 4rem;
+}
+
+a
+{
+	color: #5ca941;
+	font-weight: bold;
+	text-decoration: none;
+}
+
+.side-note
+{
+	float: right;
 }
 
 .valid
